--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/yte-intern-application
+spring.datasource.username=postgres
+spring.datasource.password=q
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.show-sql=true
