Student'ların listelenebilmesi sağlandı

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "front-end",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -22,12 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
